# fortran-calendar-jp

./: CMakeLists.txt  README.md  makefile  tags
app/: CMakeLists.txt  cli_mo.f90  main.f90  makefile
data/: abnormaldays.csv  calendar.parquet  syukujitsu_utf8.csv
install/: fortran-calendar-jp.service  fortran-calendar-jp.timer  makefile
src/: calendar_mo.f90  calendar_reader.R
test/: CMakeLists.txt
